# conversational-reflection

./: .gitignore  README.md  dev.sh  docker-compose.prod.yml  package-lock.json  package.json  quickstart.sh  run.sh  stop.sh
.github/workflows/: docker-publish.yml
backend/: .gitignore  pyproject.toml
deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml  gcp-deploy.sh  minimal-deploy.sh  nginx.conf  prod-deploy.sh  production.env.example  setup-vm.sh  simple-setup.sh  start.sh  startup-script.sh
deployment/: .env.example  Dockerfile.backend  Dockerfile.frontend  Dockerfile.journal-mcp  Dockerfile.sable-mcp  README.md  deploy.sh  docker-compose.yml  gcp-setup.sh  imessage-mcp-alternatives.md
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
docs/plans/: elevenlabs-goap-plan.md  elevenlabs.md  roleplay-coaching-prd.md
frontend/: package-lock.json  package.json
ginger_rp/: .env.local.example  next.config.js  package-lock.json
pipecat/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.production  Dockerfile.simple  bot.py  conflict_analysis.py  cors_config.md  emotive_tts_processor.py  imessage_client.py  mcp_client.py  pcc-deploy.toml  pyproject.toml  server.py  video_generator.py  voice_synthesis.py  webrtc_server.py
pipecat/src/mcp-servers/imessage-mcp/: package-lock.json  tsconfig.json
pipecat/src/mcp-servers/maya-tts-mcp/: tsconfig.json
pipecat/src/mcp-servers/private-journal-mcp/: tsconfig.json
pipecat/src/mcp-servers/sable-mcp/: package-lock.json  package.json  tsconfig.json
(+21 files in other folders)
