[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.13,<4"
dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,local-smart-turn-v3,mcp,openai,runner,silero,webrtc]",
    "pipecat-ai-cli",
    "google-generativeai>=0.8.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
